samples/_failures_safe/1761327400_70f8f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d216f49.c: In function ‘main’:
./samples/SAFE/__tmp_7d216f49.c:136:34: error: expected ‘;’ at end of input
  136 |         if (rows2 == -1) return 1
      |                                  ^
      |                                  ;
./samples/SAFE/__tmp_7d216f49.c:136:9: error: expected declaration or statement at end of input
  136 |         if (rows2 == -1) return 1
      |         ^~
./samples/SAFE/__tmp_7d216f49.c:136:9: error: expected declaration or statement at end of input
